# hackUPC_25

./: .gitignore  CLAUDE.md  README.md  backend_documentation.md  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml
agent/: agent.py  algo.ipynb  run_webui.py  skyscanner_api.py
agent/workspace/tools/code_interpreter/: kernel_connection_file_2f067880-2be6-49d6-9653-b9a2f56311c0_96145.json
app/: README.md  globals.css  layout.tsx  page.tsx
app/api/: validate-airport.tsx
app/components/: ChatInterface.tsx  TinderSwipe.tsx  TripLeaveButton.tsx  TripMap.tsx  UserCard.tsx
app/lib/: api.js  cookiemanager.js  types.js
app/trips/[tripId]/: page.tsx
app/trips/[tripId]/invite/: page.tsx
app/trips/new/: page.tsx
backend/: README.md  ai.py  app.py  db.py  models.py  qwen_agent.py  qwenagent.py  requests.http  requirements.txt  routes.py
backend/models/: models.py
backend/routes/: __init__.py  message.py  models.py  qwen.py  trip.py  trip_routes.py  user.py  util.py
chat/: base_model.py
gradiotest/: main.py  mcp_functions.py  qwen-agent-max.py  qwen-agent.py  qwenagent.py  res_dict_.json  res_dict_from.json  serve.py  skyscanner_api.py  skyscanner_api_old.py  test.py  user_data.json
old_backend/: app.py
test_backend/: app.py  filter_itineraries.py  optimizer.py  test_skyscanner_to_flask.py
