[project]
name = "hackupc-25"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "flask>=3.1.0",
  "flask-cors>=5.0.1",
  "ollama>=0.4.8",
  "openai>=1.77.0",
  "pydantic>=2.9.2",
  "psycopg2-binary>=2.9.10",
  "qwen-agent[code-interpreter,gui,mcp,rag]>=0.0.21",
  "requests>=2.32.3",
  "sqlalchemy>=2.0.40",
  "sqlalchemy-serializer>=1.4.12",
  "flask-socketio>=5.5.1",
]
